# vectorai

./: .gitignore  Makefile  README.md  dagster.yaml  docker-compose.yml  environment.yml  pyproject.toml  repo.py  workspace.yaml
githooks/: pre-commit
src/: data_helpers.py  database.py  helpers.py  predict_model.py  settings.py  stream_data.py  train_model.py
src/configs/: predict_config.yaml  stream_config.yaml  train_config.yaml
tests/: dagster_test.py
